# PeAR

./: .gitignore  Dockerfile  MANIFEST.in  PeAR.bat  PeAR.sh  README.md  add_nop.sh  build.sh  pyproject.toml  pytest.ini  pytest.sh  requirements.txt
add_nop/: __init__.py  __main__.py  gtirb_wrappers.py  nop_pass.py  requirements.txt  test.py
add_nop/typings/gtirb/: auxdata.pyi  block.pyi  cfg.pyi  module.pyi  offset.pyi  section.pyi  serialization.pyi  symbolicexpression.pyi  util.pyi
add_nop/typings/gtirb_capstone/: __init__.pyi  rewriting.pyi  x86.pyi
add_nop/typings/gtirb_functions/: __init__.pyi
add_nop/typings/gtirb_rewriting/: _auxdata.pyi  modify.pyi  passes.pyi  prepare.pyi  scopes.pyi  version.pyi
pear/: __init__.py  __main__.py  arch_utils.py  ddisasm.py  gtirb_wrappers.py  instruction_finder.py  preprocess.py  requirements.txt  utils.py  winafl_pass.py
pear/arch_utils/: arch_utils.py  linux_utils.py  windows_utils.py
pear/rewriters/: debug_rewrite.py  identity.py  regenerate.py  rewriter.py
pear/rewriters/aflpp/: aflpp_rewriter.py
pear/tests/: conftest.py  test_aflpp.py  test_identity.py  test_identity_linux.py  test_identity_windows.py  test_regenerate.py  test_trace.py  test_winafl.py
pear/tools/: gen_hints.py  ghidra_get_function_names.py  parse_coverage.py
pear/typings/gtirb/: ir.pyi  (+5 more)
sharedmem_hook_template/: hook.c
test/simple/: simple.c
utils/pear_driver/: Makefile  pear_driver.c  pear_file_driver.c  pear_rewrite_driver.c  pear_shmem_driver.c
utils/sharedmem_hook_template/: hook.c  readme
wrappers/: ddisasm  gtirb-pprinter
(+62 files in other folders)
