[project]
name = "pear"
version = "0.1.0"
description = "PeAR - the Performant AFL Rewriter. Instrument Linux and Windows binaries with fuzzing instrumentation and more."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "cpp-demangle",
    "gtirb-rewriting>=0.4.1",
    "pefile",
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["pear*"]

[project.scripts]
pear = "pear:main"

